fixed spacing in hero

--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -7,7 +7,7 @@
     display: grid;
     grid-template-columns: 1fr;
     color: whitesmoke;
-    padding-top: 20%;
+    padding-top: 15%;
     padding-bottom: 30%;
     justify-content: center;
   }
@@ -33,7 +33,6 @@
     height: 180px;
     border-radius: 50%;
     box-shadow:0px 0px 3px rgba(0, 0, 0, 0.5);
-    filter: grayscale(1);
     margin: auto;
     margin-top: 1.5em;
     margin-bottom: 1.5em;
